--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -19,8 +19,8 @@ chat_room_message:
     methods:  GET
 
 change_status_message:
-    path:     /archived/message/{messageId}
-    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:archivedMessage }
+    path:     /archived/chat-room/{chatRoom}
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:archiveChatRoom }
     methods:  POST
 
 filter_message:
@@ -113,6 +113,14 @@ artist_dashboard_messages:
   path: /messages/artist/{filter}
   defaults: {_controller: ActedLegalDocsBundle:ChatRoom:showMessagesArtistDashboard, filter: false}
   methods: GET
+
+hide_chatroom:
+  path: /chat-room/{chatRoom}/hide
+  defaults: {_controller: ActedLegalDocsBundle:ChatRoom:hideChatRoom}
+  methods: DELETE
+  requirements:
+    chatRoom: \d+
+
 
 artist_selection:
     path:     /artist-selection
