--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Artist.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Artist.yml
@@ -3,13 +3,13 @@ Acted\LegalDocsBundle\Entity\Artist:
   custom_accessor_order: [name, slug, rating]
   properties:
     id:
-      groups: [recommend_artist, spotlight_artist]
+      groups: [recommend_artist, spotlight_artist, order]
     name:
-      groups: [Default, block, quote_request, recommend_artist, spotlight_artist, profile_settings]
+      groups: [Default, order, block, quote_request, recommend_artist, spotlight_artist, profile_settings]
     slug:
       groups: [Default, block, quote_request, recommend_artist, spotlight_artist, users_list, profile_settings]
     user:
-      groups: [quote_request, recommend_artist, spotlight_artist, profile_settings]
+      groups: [order, quote_request, recommend_artist, spotlight_artist, profile_settings]
     recommends:
       groups: [recommend_artist]
     spotlight:
