--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Profile.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Profile.yml
@@ -3,3 +3,6 @@ Acted\LegalDocsBundle\Entity\Profile:
     properties:
         user:
             groups: [getEvent]
+
+        performances:
+            groups: [order]
