fix - creating empty event / change logic creating order  / change template for enquires / add serialisers configs for option/package/rate/price and another entities / change frontend part for quote reply (performance and event part - showing) / add services and extra performances in request reply - for new / change quote reply - modal window - selecting performances and services / preparing performance objects on frontend part for sending for order

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Order.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Order.yml
@@ -20,3 +20,12 @@ Acted\LegalDocsBundle\Entity\Order:
 
     services:
       groups: [order]
+
+    guaranteedBalanceTerm:
+      groups: [order]
+
+    guaranteedDepositTerm:
+      groups: [order]
+
+    status:
+      groups: [order]
