--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Profile.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Profile.yml
@@ -6,3 +6,6 @@ Acted\LegalDocsBundle\Entity\Profile:
 
         performances:
             groups: [order]
+
+        services:
+            groups: [order]
