--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Artist.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Artist.yml
@@ -7,7 +7,7 @@ Acted\LegalDocsBundle\Entity\Artist:
     name:
       groups: [Default, order, block, quote_request, recommend_artist, spotlight_artist, profile_settings]
     slug:
-      groups: [Default, block, quote_request, recommend_artist, spotlight_artist, users_list, profile_settings]
+      groups: [Default, block, quote_request, recommend_artist, spotlight_artist, users_list, profile_settings, order]
     user:
       groups: [order, quote_request, recommend_artist, spotlight_artist, profile_settings]
     recommends:
@@ -18,13 +18,17 @@ Acted\LegalDocsBundle\Entity\Artist:
       groups: [profile_settings]
     searchImage:
       groups: [profile_settings, block]
+    averageRating:
+      groups: [order]
+    totalRatings:
+      groups: [order]
   virtual_properties:
     getCityProfileId:
       serialized_name: city_id
       groups: [profile_settings]
     getCityName:
       serialized_name: city
-      groups: [Default, block, profile_settings, quote_request]
+      groups: [Default, block, profile_settings, quote_request, order]
     getCountryId:
       serialized_name: country_id
       groups: [profile_settings]
@@ -39,7 +43,7 @@ Acted\LegalDocsBundle\Entity\Artist:
       groups: [block]
     getCategoriesNames:
       serialized_name: categories
-      groups: [block, quote_request]
+      groups: [block, quote_request, order]
     getLastPerformanceMedia:
       serialized_name: media
       groups: [block]
