--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.ChatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.ChatRoom.yml
@@ -2,7 +2,7 @@ Acted\LegalDocsBundle\Entity\ChatRoom:
     exclusion_policy: NONE
     properties:
         id:
-            groups: [chat_list, all_messages, chat_room]
+            groups: [chat_list, all_messages, chat_room, order]
             serialized_name: chat_id
         event:
             groups: [chat_room, chat_list, all_messages]
