--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -100,21 +100,26 @@ api_accept_details:
     defaults: {_controller: ActedLegalDocsBundle:ChatRoom:acceptDetails}
 
 events:
-  path: /events
-  defaults: {_controller: ActedLegalDocsBundle:ChatRoom:showEvents }
-  methods: GET
+    path: /events
+    defaults: {_controller: ActedLegalDocsBundle:ChatRoom:showEvents }
+    methods: GET
 
 event_messages:
-  path: /messages/event
-  defaults: {_controller: ActedLegalDocsBundle:ChatRoom:showMessagesByEvent}
-  methods: GET
+    path: /messages/event
+    defaults: {_controller: ActedLegalDocsBundle:ChatRoom:showMessagesByEvent}
+    methods: GET
 
 artist_dashboard_messages:
-  path: /messages/artist/{filter}
-  defaults: {_controller: ActedLegalDocsBundle:ChatRoom:showMessagesArtistDashboard, filter: false}
-  methods: GET
+    path: /messages/artist/{filter}
+    defaults: {_controller: ActedLegalDocsBundle:ChatRoom:showMessagesArtistDashboard, filter: false}
+    methods: GET
 
 artist_selection:
     path:     /artist-selection
     defaults: { _controller: ActedLegalDocsBundle:ChatRoom:artistSelection }
+    methods:  GET
+
+client_payments:
+    path:     /payments
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:showPayments }
     methods:  GET
