--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.ChatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.ChatRoom.yml
@@ -6,7 +6,7 @@ Acted\LegalDocsBundle\Entity\ChatRoom:
             serialized_name: chat_id
         event:
             groups: [chat_room, chat_list, all_messages]
-        offer:
+        order:
             groups: [chat_list, chat_room, all_messages]
         message:
             groups: [chat_room]
