--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -14,7 +14,7 @@ Acted\LegalDocsBundle\Entity\Event:
         startingDate:
             groups: [Default, getEvent, chat_list, chat_room, all_messages, order]
         endingDate:
-            groups: [Default, getEvent]
+            groups: [Default, getEvent, order]
         timing:
             groups: [Default, getEvent, chat_list, chat_room, order]
         comments:
