fix - showing order in chat room / add verifying existing artists in event / change event notify when create and connect event to artist / modify api canceling orders

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/order.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/order.yml
@@ -27,8 +27,8 @@ order_update:
     methods:  PUT
 
 order_cancel:
-    path:     /{orderId}
-    defaults: { _controller: ActedLegalDocsBundle:Order:cancelOrder, _format: json }
+    path:     /{orderId}/{type}
+    defaults: { _controller: ActedLegalDocsBundle:Order:cancelOrder, _format: json, type: null }
     methods:  DELETE
     requirements:
       orderId: \d+
