Fix artist not null values

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -36,7 +36,8 @@ Acted\LegalDocsBundle\Entity\Artist:
             default: 0
         totalRatings:
           type: integer
-          default: 0
+          options:
+            default: 0
         comments:
           type: string(512)
           nullable: true
