fix showing packages/options/rates and services with performances which was removed

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Option.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Option.yml
@@ -7,4 +7,8 @@ Acted\LegalDocsBundle\Entity\Option:
     duration:
       groups: [order]
     rates:
+      groups: []
+  virtual_properties:
+    getExistedRates:
+      serialized_name: rates
       groups: [order]
