--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Package.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Package.yml
@@ -2,9 +2,11 @@ Acted\LegalDocsBundle\Entity\Package:
   properties:
     id:
       groups: [order]
-
     name:
       groups: [order]
-
     options:
-      groups: [order]
+      groups: []
+  virtual_properties:
+      getExistedOptions:
+        serialized_name: options
+        groups: [order]
