--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Profile.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Profile.yml
@@ -3,14 +3,10 @@ Acted\LegalDocsBundle\Entity\Profile:
     properties:
         user:
             groups: [getEvent]
-        performances:
-            groups: []
-        services:
-            groups: []
     virtual_properties:
-        getPerformances:
+        getExistedPerformances:
           serialized_name: performances
           groups: [order]
-        getServices:
+        getExistedServices:
           serialized_name: services
           groups: [order]
