--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,6 +37,7 @@ framework:
 
 # Twig Configuration
 twig:
+    cache: false
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     globals:
