add statuses to messages dashboard / change layout / serializer

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Order.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Order.yml
@@ -28,7 +28,7 @@ Acted\LegalDocsBundle\Entity\Order:
       groups: [order]
 
     status:
-      groups: [order]
+      groups: [order, all_messages]
 
     chat:
       groups: [order]
