Performance additional info

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Order.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Order.yml
@@ -36,6 +36,9 @@ Acted\LegalDocsBundle\Entity\Order:
     performance_start_time:
       groups: [order]
 
+    additional_info:
+      groups: [order]
+
     deposit_amount:
       groups: [order]
 
