--- a/src/Acted/LegalDocsBundle/Resources/config/services.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/services.yml
@@ -26,7 +26,9 @@ services:
 
     acted_legal_docs.model.order_manager:
         class: Acted\LegalDocsBundle\Model\OrderManager
-        arguments: ["@doctrine.orm.entity_manager"]
+        arguments: ["@doctrine.orm.entity_manager","@gos_web_socket.zmq.pusher"]
+        tags:
+          - { name: doctrine.event_listener, event: postPersist }
 
     ####### RPC #############
     socket_chat.rpc_server:
