fix venue type in quote reply

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.RefVenueType.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.RefVenueType.yml
@@ -4,4 +4,4 @@ Acted\LegalDocsBundle\Entity\RefVenueType:
         id:
             groups: [getEvent]
         venueType:
-            groups: [chat_room, getEvent]
+            groups: [chat_room, getEvent, order]
