add logic count of prices for payments in booking and chat / dynamic showing acts(options) in booking

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Order.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Order.yml
@@ -4,7 +4,7 @@ Acted\LegalDocsBundle\Entity\Order:
       groups: [order]
 
     items:
-      groups: [order]
+      groups: [order, chat_room]
 
     artist:
       groups: [order]
