fix fix removing extra performance / fix updating quote reply

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/order.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/order.yml
@@ -54,3 +54,10 @@ order_client_select:
     path:     /client/select
     defaults: { _controller: ActedLegalDocsBundle:Order:clientSelect, _format: json }
     methods:  POST
+
+order_item_remove:
+    path:     /{orderItemId}
+    defaults: { _controller: ActedLegalDocsBundle:Order:deleteOrderItem, _format: json}
+    methods:  DELETE
+    requirements:
+      orderItemId: \d+
