timing notification fix

--- a/src/Acted/LegalDocsBundle/Resources/config/services.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/services.yml
@@ -56,4 +56,6 @@ services:
 
     system_log:
         class: Acted\LegalDocsBundle\Service\SystemLogService
-        arguments: [@doctrine.orm.entity_manager]
+        arguments: [@doctrine.orm.entity_manager, @gos_web_socket.zmq.pusher]
+        #tags:
+                  #- { name: doctrine.event_listener, event: postPersist }
