O_O VERY BAD!!! CityId hasn't saved in event details!!! FIXED NOW. 14/01/2017 8:20 PM

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Event.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Event.orm.yml
@@ -9,6 +9,9 @@ Acted\LegalDocsBundle\Entity\Event:
             generator:
                 strategy: AUTO
     fields:
+        cityId:
+          type: integer(11)
+          nullable: false
         eventRef:
           type: string(64)
           unique: true
