Added place_id to Event table on create and on update. 16/01/2017 3:53 PM

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Event.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Event.orm.yml
@@ -50,6 +50,9 @@ Acted\LegalDocsBundle\Entity\Event:
           nullable: true
           options:
             unsigned: true
+        place_id:
+          type: string(256)
+          nullable: true
     manyToOne:
           user:
             targetEntity: Acted\LegalDocsBundle\Entity\User
