Issue #4 Changing the Performance EDIT Logic FIX

--- a/src/Acted/LegalDocsBundle/Resources/config/services.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/services.yml
@@ -62,5 +62,6 @@ services:
 
     performance_prepresist_listener:
         class: Acted\LegalDocsBundle\EventListener\PerformancePrePersistListener
+        arguments: ['@logger']
         tags:
-            - { name: doctrine.event_listener, event: prePersist }
+            - { name: doctrine.event_listener, event: postPersist }
